@@ -4,16 +4,34 @@ class UsaEpayTransactionTest < Test::Unit::TestCase
   include CommStub
 
   def setup
-    @gateway = UsaEpayTransactionGateway.new(
-                :login => 'LOGIN'
-               )
+    @gateway = UsaEpayTransactionGateway.new(:login => 'LOGIN')
 
     @credit_card = credit_card('4242424242424242')
     @options = {
-      :billing_address => address,
+      :billing_address  => address,
       :shipping_address => address
     }
     @amount = 100
+  end
+  
+  def test_urls
+    assert_equal 'https://www.usaepay.com/gate',      UsaEpayTransactionGateway.live_url
+    assert_equal 'https://sandbox.usaepay.com/gate',  UsaEpayTransactionGateway.test_url
+  end
+  
+  def test_request_url_live
+    gateway = UsaEpayTransactionGateway.new(:login => 'LOGIN', :test => false)
+    gateway.expects(:ssl_post).
+      with('https://www.usaepay.com/gate', purchase_request).
+      returns(successful_purchase_response)
+    assert response = gateway.purchase(@amount, @credit_card, @options)
+  end
+  
+  def test_request_url_test
+    @gateway.expects(:ssl_post).
+      with('https://sandbox.usaepay.com/gate', purchase_request).
+      returns(successful_purchase_response)
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
   end
 
   def test_successful_request
@@ -39,6 +57,42 @@ class UsaEpayTransactionTest < Test::Unit::TestCase
     end.check_request do |endpoint, data, headers|
       assert_match(/UMinvoice=1337/, data)
       assert_match(/UMdescription=socool/, data)
+    end.respond_with(successful_purchase_response)
+    assert_success response
+  end
+  
+  def test_successful_purchase_split_payment
+    response = stub_comms do
+      @gateway.purchase(@amount, @credit_card, @options.merge(
+        :split_payments => [
+          { :key => 'abc123', :amount => 199, :description => 'Second payee' },
+          { :key => 'def456', :amount => 911, :description => 'Third payee' },
+        ]
+      ))
+    end.check_request do |endpoint, data, headers|
+      assert_match /UM02key=abc123/,                data
+      assert_match /UM02amount=1.99/,               data
+      assert_match /UM02description=Second\+payee/, data
+      
+      assert_match /UM03key=def456/,                data
+      assert_match /UM03amount=9.11/,               data
+      assert_match /UM03description=Third\+payee/,  data
+      
+      assert_match /UMonError=Void/,                data
+    end.respond_with(successful_purchase_response)
+    assert_success response
+  end
+  
+  def test_successful_purchase_split_payment_with_custom_on_error
+    response = stub_comms do
+      @gateway.purchase(@amount, @credit_card, @options.merge(
+        :split_payments => [
+          { :key => 'abc123', :amount => 199, :description => 'Second payee' }
+        ],
+        :on_error => 'Continue'
+      ))
+    end.check_request do |endpoint, data, headers|
+      assert_match /UMonError=Continue/, data
     end.respond_with(successful_purchase_response)
     assert_success response
   end
@@ -115,20 +169,20 @@ class UsaEpayTransactionTest < Test::Unit::TestCase
     end
   end
 
-  private
+private
 
   def assert_address(type, post)
     prefix = key_prefix(type)
-    assert_equal @credit_card.first_name, post[key(prefix, 'fname')]
-    assert_equal @credit_card.last_name, post[key(prefix, 'lname')]
-    assert_equal @options[:billing_address][:company], post[key(prefix, 'company')]
+    assert_equal @credit_card.first_name,               post[key(prefix, 'fname')]
+    assert_equal @credit_card.last_name,                post[key(prefix, 'lname')]
+    assert_equal @options[:billing_address][:company],  post[key(prefix, 'company')]
     assert_equal @options[:billing_address][:address1], post[key(prefix, 'street')]
     assert_equal @options[:billing_address][:address2], post[key(prefix, 'street2')]
-    assert_equal @options[:billing_address][:city], post[key(prefix, 'city')]
-    assert_equal @options[:billing_address][:state], post[key(prefix, 'state')]
-    assert_equal @options[:billing_address][:zip], post[key(prefix, 'zip')]
-    assert_equal @options[:billing_address][:country], post[key(prefix, 'country')]
-    assert_equal @options[:billing_address][:phone], post[key(prefix, 'phone')]
+    assert_equal @options[:billing_address][:city],     post[key(prefix, 'city')]
+    assert_equal @options[:billing_address][:state],    post[key(prefix, 'state')]
+    assert_equal @options[:billing_address][:zip],      post[key(prefix, 'zip')]
+    assert_equal @options[:billing_address][:country],  post[key(prefix, 'country')]
+    assert_equal @options[:billing_address][:phone],    post[key(prefix, 'phone')]
   end
 
   def key_prefix(type)
@@ -137,6 +191,10 @@ class UsaEpayTransactionTest < Test::Unit::TestCase
 
   def key(prefix, key)
     @gateway.send(:address_key, prefix, key)
+  end
+  
+  def purchase_request
+    "UMamount=1.00&UMinvoice=&UMdescription=&UMcard=4242424242424242&UMcvv2=123&UMexpir=0914&UMname=Longbob+Longsen&UMbillfname=Longbob&UMbilllname=Longsen&UMbillcompany=Widgets+Inc&UMbillstreet=1234+My+Street&UMbillstreet2=Apt+1&UMbillcity=Ottawa&UMbillstate=ON&UMbillzip=K1C2N6&UMbillcountry=CA&UMbillphone=%28555%29555-5555&UMshipfname=Longbob&UMshiplname=Longsen&UMshipcompany=Widgets+Inc&UMshipstreet=1234+My+Street&UMshipstreet2=Apt+1&UMshipcity=Ottawa&UMshipstate=ON&UMshipzip=K1C2N6&UMshipcountry=CA&UMshipphone=%28555%29555-5555&UMstreet=1234+My+Street&UMzip=K1C2N6&UMcommand=cc%3Asale&UMkey=LOGIN&UMsoftware=Active+Merchant&UMtestmode=0"
   end
 
   def successful_purchase_response
